# braket

./: .env.example  .gitignore  .mcp.json  .yarnrc.yml  Anchor.toml  README.md  package.json  tsconfig.json
.claude/rules/: mcp-usage.md
app/: .env.example  index.html  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
app/src/: App.tsx  index.css  main.tsx  polyfills.ts
app/src/components/bracket/: bracket-connectors.tsx  bracket-side.tsx  bracket-view.tsx  center-trophy.tsx  match-card.tsx
app/src/components/landing/: landing-page.tsx
app/src/components/layout/: boot-splash.tsx  footer-stats.tsx  header.tsx
app/src/components/predict/: mini-bracket.tsx  stake-modal.tsx
app/src/components/predictions/: my-predictions.tsx
app/src/lib/: bracket-logic.test.ts  bracket-logic.ts  config.ts  format.ts  prediction-store.tsx  supabase-data.ts  supabase.ts  tournament-data.ts  types.ts  wallet-provider.tsx
docs/: README.md  frontend-spec.md  roadmap.md
docs/architecture/: frontend.md  onchain-backend.md  overview.md
docs/product/: concept.md  economics.md
programs/braket/: Cargo.toml
programs/braket/src/: lib.rs
supabase/.temp/: linked-project.json
supabase/functions/_shared/: crypto.ts
supabase/functions/check-payment/: index.ts
supabase/functions/create-prediction/: index.ts
supabase/functions/reconcile/: index.ts
supabase/functions/sweep/: index.ts
supabase/migrations/: 0001_cup_predict_init.sql  0002_payments.sql  0003_wallet_nullable.sql  0004_sweep.sql  0005_bracket_hash.sql
tests/: braket.ts
(+5 files in other folders)
