[package]
name = "braket"
version = "0.1.0"
description = "Braket Web3 program on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "braket"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

# NOTE: init-if-needed is intentionally NOT enabled — create every account
# explicitly (security rule: avoid init_if_needed).
[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
